--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <label class="label"> Name:
       <input class="input" type="text" />
     </label>
+    <label class="label"> Email:
+      <input class="input" type="text" />
+    </label>
   </form>
 </body>
 
