--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
 
 <body>
   <form class="form">
-    <label class="label"> Name:
+    <label class="label"> Nombre:
       <input class="input" type="text" />
     </label>
     <label class="label"> Email:
-      <input class="input" type="text" />
+      <input class="input" type="email" />
+    </label>
+    <label class="label"> Contraseña:
+      <input class="input" type="password" />
+    </label>
+    <label class="label"> Telféono:
+      <input class="input" type="tel" />
+    </label>
+    <label class="label"> Fecha de nacimiento:
+      <input class="input" type="date" />
     </label>
   </form>
 </body>
