Add genre input

--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
     <label class="label"> Contraseña:
       <input class="input" type="password" />
     </label>
-    <label class="label"> Telféono:
+    <label class="label"> Teléfono:
       <input class="input" type="tel" />
     </label>
     <label class="label"> Fecha de nacimiento:
       <input class="input" type="date" />
     </label>
+    <label>
+      <select>
+        <option value="Male"> Hombre</option>
+        <option value="Female"> Mujer</option>
+        <option value="Other"> Otro</option>
+        <option value="I prefer not to say"> Prefiero no decirlo</option>
+      </select>
+    </label>
+
   </form>
 </body>
 
