--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="description" content="Ejercicio form">
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./styles/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicio form</title>
@@ -27,7 +27,7 @@
     <label class="label"> Fecha de nacimiento:
       <input class="input" type="date" />
     </label>
-    <label>
+    <label class="label">
       <select>
         <option value="Male"> Hombre</option>
         <option value="Female"> Mujer</option>
@@ -35,8 +35,14 @@
         <option value="I prefer not to say"> Prefiero no decirlo</option>
       </select>
     </label>
-
+    <label class="label check-box"> Aceptar términos y condiciones
+      <input class="input" type="checkbox" />
+    </label>
+    <div class="button-container">
+      <button class="submit-button" type="submit">Enviar formulario</button>
+    </div>
   </form>
+  <img class="image" src="./images/backgroundImage.jpg" alt="background" width="100%" height="100%" />
 </body>
 
 </html>
